--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "dotenv": "^8.6.0",
     "gatsby": "^3.4.1",
+    "gatsby-source-airtable": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
