--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "dotenv": "^8.6.0",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-source-airtable": "^2.1.1",
+    "gatsby-theme-material-ui": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
