--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "format": "prettier \"**/*.+(js|ts|tsx)\" --write"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -23,5 +24,8 @@
     "gatsby-theme-material-ui": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.1"
   }
 }
