--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^3.4.1",
     "gatsby-source-airtable": "^2.1.1",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.1.4"
   },
