add simple price calculator

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^10.2.6",
     "dotenv": "^8.6.0",
     "gatsby": "^3.4.1",
