--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "dotenv": "^8.6.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-emotion": "^6.6.0",
+    "gatsby-plugin-netlify-cms": "^5.6.0",
     "gatsby-source-airtable": "^2.1.1",
-    "react": "^17.0.1",
+    "gatsby-source-filesystem": "^3.6.0",
+    "netlify-cms-app": "^2.15.17",
+    "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "tailwindcss": "^2.1.4",
     "twin.macro": "^2.4.2"
   },
