--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^10.2.6",
     "dotenv": "^8.6.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-emotion": "^6.6.0",
+    "gatsby-plugin-mdx": "^2.6.0",
     "gatsby-plugin-netlify-cms": "^5.6.0",
     "gatsby-source-airtable": "^2.1.1",
     "gatsby-source-filesystem": "^3.6.0",
