display images from cms in gallery

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,11 +16,11 @@ collections:
       - { name: body, label: Body, widget: markdown }
 
   - name: photos
-    label: Photo
+    label: Photo  
     folder: photos
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     create: true
     fields:
-      - { label: Path, name: path }
       - { label: Image, name: image, widget: image }
       - { label: Alt Text, name: alt, widget: string }
       - { label: Date, name: date, widget: datetime }
