--- a/package.json
+++ b/package.json
@@ -39,9 +39,14 @@
     "twin.macro": "^2.4.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "eslint-plugin-react": "^7.24.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.2"
   },
   "lint-staged": {
     "*.--write": "prettier --write"
