--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "lib": ["dom", "es2017"],
     "allowJs": true,
-    // "checkJs": true,
+    "checkJs": true,
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "strict": true,
